crates/shipper-lock/src/snapshots/shipper_lock__edge_case_tests__lock_info_all_fields.snap
---
source: crates/shipper-lock/src/lib.rs
expression: info
---
LockInfo {
    pid: 42,
    hostname: "snap-host",
    acquired_at: 2025-06-15T08:30:00Z,
    plan_id: Some(
        "plan-xyz-789",
    ),
}
