crates/shipper-lock/src/snapshots/shipper_lock__edge_case_tests__lock_info_no_plan_id.snap
---
source: crates/shipper-lock/src/lib.rs
expression: info
---
LockInfo {
    pid: 1,
    hostname: "snap-host",
    acquired_at: 2025-06-15T08:30:00Z,
    plan_id: None,
}
