crates/shipper-lock/src/snapshots/shipper_lock__edge_case_tests__lock_state_locked_no_plan.snap
---
source: crates/shipper-lock/src/lib.rs
expression: state
---
Locked(
    LockInfo {
        pid: 100,
        hostname: "snap-host",
        acquired_at: 2025-06-15T08:30:00Z,
        plan_id: None,
    },
)
