crates/shipper-lock/src/snapshots/shipper_lock__edge_case_tests__lock_state_stale.snap
---
source: crates/shipper-lock/src/lib.rs
expression: state
---
Stale(
    LockInfo {
        pid: 300,
        hostname: "snap-host",
        acquired_at: 2025-06-15T08:30:00Z,
        plan_id: Some(
            "old-plan",
        ),
    },
)
